Parallax and Scrollbar Fixed with Slideshow
Add 3d effect to parallax with js and replace slideshow images

--- a/style.css
+++ b/style.css
@@ -48,12 +48,13 @@ nav-home{
     width:100%; 
     background-color:#fff;
     border-top:10px solid #529FDB;
-    border-bottom:10px solid #529FDB
+    border-bottom:10px solid #529FDB;
+    opacity: 1;
 }
 
 .panel-title{
     font-size:4em;
-    background-color:#fff;
+    background-color:rgba(255,255,255, 1);
     color:#000;
     font-weight:bold;
 }
@@ -62,22 +63,12 @@ panel-body-style{
     width:50%;
 }
 
-/**/
-.parallax { 
-    /* The image used */
-   background-image: url("https://placeit.net/uploads/background/image/914/default_b7618e53ec04ea3580899723dfafa527.png");
-
-    /* Set a specific height */
-    height: 100%; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+/**********************************************************************/
+.parallax-window{
+    height:100%;
+    background:transparent;
 }
 
-/*********************************************************************************************************/
-
-
-
+.body-text{
+    opacity: .99;
+}
